appId: com.cborrero.koreantogether
---
- launchApp
- tapOn: "Dialog & Question"
- assertVisible: "Dialog"
- assertVisible: "Play"
- assertVisible: "Slower"
- assertVisible: "Translation"
- tapOn: "Translation"
- assertVisible: "Hide"
- tapOn: "Menu"
- assertVisible: "Korean"
